fix up header spacing

--- a/templates/style.scss
+++ b/templates/style.scss
@@ -62,10 +62,10 @@ p {
         @include omega();
 
         background-color: $header-color;
-        margin: 15px 0 15px 0;
+        margin: 16px 0 0 0;
 
         h1 {
-            padding: 0 10px 0 10px;
+            padding: 0 8px 0 8px;
             color: white;
             font-size: 1.6em;
         }
